migration towards explicit test data